# data-lake

./: Cargo.toml  README.md
config/: master_config.properties  slave_config.properties
daql_analysis/: Cargo.toml
daql_analysis/src/: lib.rs
daql_analysis/src/analysis/: alter_daql.rs  create_daql.rs  mod.rs  select_daql.rs
data-lake-client/: Cargo.toml
data-lake-client/src/: main.rs
data-lake-client/src/controls/: metadata_logic.rs  mod.rs  stream_read_logic.rs
data-lake-client/src/entity/: mod.rs  pub_function.rs
data-lake-lib/: Cargo.toml
data-lake-lib/src/: lib.rs
data-lake-lib/src/entity/: DaqlEntity.rs  DataLakeEntity.rs  MasterEntity.rs  SlaveEntity.rs  bytes_reader.rs  const_property.rs  mod.rs
data-lake-lib/src/function/: BufferObject.rs  PosttingTcpStream.rs  RandomNumber.rs  fast_validate.rs  mod.rs  read_function.rs  table_structure.rs  vec_trait.rs
entity_lib/: Cargo.toml
entity_lib/src/: lib.rs
entity_lib/src/entity/: DaqlEntity.rs  DataLakeEntity.rs  Error.rs  MasterEntity.rs  SlaveEntity.rs  const_property.rs  mod.rs
master/: Cargo.toml
master/src/: main.rs
master/src/controls/: alter.rs  batch_insert.rs  compress_table.rs  create.rs  drop_table.rs  insert.rs  max_offset.rs  metadata.rs  mod.rs  query.rs  show_table.rs  stream_read.rs
master/src/master_operation/: tcp_encapsulation.rs
master/src/mechanism/: replicas.rs
public_function/: Cargo.toml
public_function/src/: BufferObject.rs  PosttingTcpStream.rs  lib.rs  read_function.rs  string_trait.rs  vec_trait.rs
slave/: Cargo.toml
slave/src/: main.rs
slave/src/controls/: batch_insert.rs  compress_table.rs  create_table.rs  drop_table.rs  insert_data.rs  max_offset.rs  mod.rs  query_table.rs  stream_read.rs
slave/src/mechanism/: mod.rs  replicas.rs
slave/src/slave_operation/: mod.rs
