
[workspace]
members = [ "daql_analysis", "data-lake-client", "entity_lib","master", "public_function", "slave"]

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
bincode = "1.3.3"
memmap2 = "0.9.5"
uuid = { version = "1.14.0", features = ["v4"] }
snap = "1.1.1"
log = "0.4.26"
env_logger = "0.11.6"
sqlparser = "0.55.0"