
[workspace]
members = [ "daql_analysis", "data-lake-client", "entity_lib","master", "public_function", "slave"]

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = "1.3.3"
memmap2 = "0.9.5"
uuid = { version = "1.14.0", features = ["v4"] }
snap = "1.1.1"
log = "0.4.26"
env_logger = "0.11.6"
rand = "0.9.1"
futures = "0.3.31"