
[workspace]
members = [ "daql_analysis", "data-lake-client", "data-lake-lib","master", "slave"]

[workspace.dependencies]
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = "1.3.3"
memmap2 = "0.9.5"
uuid = { version = "1.14.0", features = ["v4"] }
snap = "1.1.1"
env_logger = "0.11.6"
rand = "0.9.1"
chrono = "0.4"
rayon = "1.10.0"
dashmap = "6.1.0"
mimalloc = "0.1.47"
ahash = "0.8.12"