[package]
name = "master"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
bincode = {workspace = true}
memmap2 = {workspace = true}
uuid = {workspace = true}
log = {workspace = true}
env_logger = {workspace = true}
snap = {workspace = true}

entity_lib = {path = "../entity_lib"}
public_function = {path = "../public_function"}
daql_analysis = {path = "../daql_analysis"}