[package]
name = "public_function"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
bincode = {workspace = true}
snap = {workspace = true}
uuid = { workspace = true}
memmap2 = {workspace = true}
rand = {workspace = true}

entity_lib = {path = "../entity_lib"}