[package]
name = "slave"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
serde_json = { workspace = true }
bincode = {workspace = true}
memmap2 = {workspace = true}
snap = {workspace = true}
log = {workspace = true}
env_logger = {workspace = true}
uuid = {workspace = true}
rayon = {workspace = true}
chrono = {workspace = true}
dashmap = { workspace = true }
mimalloc = {workspace = true}


entity_lib = {path = "../entity_lib"}
public_function = {path = "../public_function"}
