[package]
name = "slave"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
bincode = {workspace = true}
memmap2 = {workspace = true}
snap = {workspace = true}
env_logger = {workspace = true}
uuid = {workspace = true}
rayon = {workspace = true}
chrono = {workspace = true}
mimalloc = {workspace = true}
ahash = {workspace = true}

entity_lib = {path = "../data-lake-lib" }
